# hw9_scrapy

./: pyproject.toml
hw9_scrapy/hw9/: authors.json  main.py
hw9_scrapy/hw9/mongodb_module/: download_jsons.py  find_func.py
hw9_scrapy/hw9/spiders/: authors.py  main_spider.py  qoutes.py
